# SLoader

./: README.md  docker-compose.yml
builder/: Dockerfile
builder/implant_source/builder_manager/: Cargo.toml  c
builder/implant_source/builder_manager/src/: main.rs
builder/implant_source/implant/: Cargo.toml
builder/implant_source/implant/src/: lib.rs  onedrive_base.rs  protonvpn_base.rs  sharepoint_base.rs
mysql/: Dockerfile  sloader.sql
phpmyadmin/: Dockerfile  config.inc.php
web/: Dockerfile
web/www/: index.php
web/www/assets/css/: style-preset.css  style.css
web/www/assets/fonts/: feather.css  fontawesome.css  material.css  tabler-icons.min.css
web/www/assets/fonts/phosphor/duotone/: style.css
web/www/assets/js/: pcoded.js
web/www/assets/js/pages/: dashboard-default.js  dashboard-finance.js  invoice-dashboard.js
web/www/dashboard/: index.php
web/www/settings/: settings.php  sql_queries.php
