[package]
name = "builder_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json","multipart"] }
zip = "0.5"


aes = "0.7" 
block-modes = "0.8" 
rand = "0.8"
serde_derive = "1.0"
hex = "0.4"
base64 = "0.21"