[package]
name = "implant"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Specify that we want to compile a dynamic library (DLL)

[dependencies]
windows-sys = { version = "0.48.0", features = ["Win32_System_Threading", "Win32_System_Memory", "Win32_Foundation"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde_json = "1.0"

aes = "0.7"
block-modes = "0.8"
hex = "0.4"

[dependencies.windows]
version = "0.51"
    features = [
        "Win32_Security_Cryptography",
        "Win32_System_Memory", 
        "Win32_Foundation", 
        "Win32_System_Threading",
        "Win32_System_RestartManager",
        "Win32_System_LibraryLoader",
    ]

